--- a/ConversionReader/ConversionReader/ConversionReader.csproj
+++ b/ConversionReader/ConversionReader/ConversionReader.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Handler.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
