UI Form setup-wrapup
Made a mockup of Form 2 & changing to branch

--- a/ConversionReader/ConversionReader/ConversionReader.csproj
+++ b/ConversionReader/ConversionReader/ConversionReader.csproj
@@ -71,6 +71,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
